@@ -1,3 +1,4 @@
+2/25/13 fix specification of jshint globals in Gruntfile.js, to silence "'define' is undefined" complaints
 2/25/13 add missing semicolons identified by jshint
 2/25/13 revert to composition for implementation of PerformanceMonitor, no need for inheritance
 2/25/13 change package.json to specify non-fuzzy versions for dependencies (recommended by SB)
